--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,6 @@ name = "FungOS"
 version = "0.1.0"
 edition = "2018"
 
-[profile.dev]
-panic = "abort"
-
 [profile.release]
 panic = "abort"
 
@@ -13,3 +10,15 @@ panic = "abort"
 
 [dependencies]
 bootloader = "0.9.23"
+volatile = "0.2.6"
+spin = "0.5.2"
+x86_64 = "0.14.2"
+uart_16550 = "0.2.0"
+
+[dependencies.lazy_static]
+version = "1.0"
+features = ["spin_no_std"]
+
+[package.metadata.bootimage]
+test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
+test-success-exit-code = 33
